--- a/docs/VnVReport/VnVReport.tex
+++ b/docs/VnVReport/VnVReport.tex
@@ -1279,7 +1279,7 @@ Multiple database connectors (Project, Label, Labeller, etc.) are covered and va
 3. Test Automation Setup\\
 We're clearly using tools like pytest and coverage, which are the gold standard for Python testing. Having such tooling integrated sets our team up for better CI/CD workflows and reliable production deployments. \\
 
-4. High Coverage on Utility & Interface Code\\
+4. High Coverage on Utility and Interface Code\\
 Most of our utility modules and test files are completely covered, ensuring the interface points, user flows, and basic processing logic are well validated.\\
 \begin{figure}[H]
     \centering
