Update link to user guide

--- a/docs/ReflectAndTrace/ReflectAndTrace.tex
+++ b/docs/ReflectAndTrace/ReflectAndTrace.tex
@@ -188,7 +188,7 @@ The challenge level of our project is general. We were able to create a solution
 \subsection{Extras}
 \begin{itemize}
   \item Usability Testing (\href{https://github.com/OKKM-insights/OKKM.insights/blob/main/docs/Extras/UsabilityReport/UsabilityReport.pdf}{view here}): Conducted by allowing users to test the application interface and provide feedback to us through a questionnaire
-  \item User Guide (\href{https://github.com/OKKM-insights/OKKM.insights/tree/main/docs/UserGuide}{view here}): Create a guide demonstrating how to use the product and its various features
+  \item User Guide (\href{https://github.com/OKKM-insights/OKKM.insights/blob/main/docs/UserGuide/OrbitWatch%20User%20Guide.pdf}{view here}): Create a guide demonstrating how to use the product and its various features
 \end{itemize}
 
 \section{Design Iteration (LO11 (PrototypeIterate))}
