--- a/docs/ReflectAndTrace/ReflectAndTrace.tex
+++ b/docs/ReflectAndTrace/ReflectAndTrace.tex
@@ -2,6 +2,8 @@
 
 \usepackage{tabularx}
 \usepackage{booktabs}
+\usepackage{longtable}
+\usepackage{array}
 
 \title{Reflection and Traceability Report on \progname}
 
